stored all the html style in this file

--- a/style.css
+++ b/style.css
@@ -100,3 +100,70 @@ tr.even {
 tr:hover {
 	background-color: #ff8e3c15;
 }
+form {
+	width: 300px;
+	height: 700px;
+	background-color: hotpink;
+	border: 2px solid plum;
+	border-radius: 10px;
+	box-shadow: 10px 5px 5px skyblue;
+	display: grid;
+	grid-template-columns: 1fr;
+	padding: 2rem;
+	position: absolute;
+    transform: translateY(-197%) translateX(100%);
+}
+
+fieldset {
+	display: flex;
+	flex-direction: column;
+}
+label {
+	font-size: 20px;
+}
+input {
+	width: 290px;
+    height: 60px;
+    border: none;
+    border-radius: 5px;
+}
+.action {
+	display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.save, 
+.cancel {
+	width: 100px;
+    height: 50px;
+    border: none;
+    border-radius: 30px;
+    background-color: aquamarine;
+}
+
+.modal {
+	width: 300px;
+	height: 200px;
+	background-color: hotpink;
+	border: 2px solid plum;
+	border-radius: 10px;
+	box-shadow: 10px 5px 5px skyblue;
+	padding: 2rem;
+	text-align: center;
+	transform: translateX(100%) translateY(-547%)
+}
+.confirm {
+	font-size: 20px;
+}
+.button {
+	display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.button button {
+	width: 90px;
+    height: 50px;
+    border: none;
+    border-radius: 10px;
+    background-color: cadetblue;
+}
