--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ h3 {
 
 h4 {
 	font-size: 1.563em;
+	margin: 0;
 }
 
 h5 {
@@ -102,7 +103,7 @@ tr:hover {
 }
 form {
 	width: 300px;
-	height: 700px;
+	height: 550px;
 	background-color: hotpink;
 	border: 2px solid plum;
 	border-radius: 10px;
@@ -110,20 +111,29 @@ form {
 	display: grid;
 	grid-template-columns: 1fr;
 	padding: 2rem;
-	position: absolute;
-    transform: translateY(-197%) translateX(100%);
+	position: fixed;
+	top: 0;
+	left: 40%;
+	opacity: 0;
+}
+
+form.open {
+	opacity: 1;
 }
 
 fieldset {
 	display: flex;
 	flex-direction: column;
 }
+fieldset:nth-of-type(5) {
+	padding-bottom: 1rem;
+}
 label {
 	font-size: 20px;
 }
 input {
 	width: 290px;
-    height: 60px;
+    height: 45px;
     border: none;
     border-radius: 5px;
 }
@@ -140,6 +150,9 @@ input {
     border-radius: 30px;
     background-color: aquamarine;
 }
+.save {
+	margin-bottom: 1rem;
+}
 
 .modal {
 	width: 300px;
@@ -149,8 +162,9 @@ input {
 	border-radius: 10px;
 	box-shadow: 10px 5px 5px skyblue;
 	padding: 2rem;
-	text-align: center;
-	transform: translateX(100%) translateY(-547%)
+	position: fixed;
+	top: 50%;
+	left: 40%;
 }
 .confirm {
 	font-size: 20px;
